# hidden-in-plain-script

./: .env.example  README.md  config.py  duplicate_all_layers_sae.py  google_transliterator.py  judge.py  logit_lens_transliteration.ipynb  mechanistic_interp_corrected.py  pipeline_1.py  process_dataset.py  pyproject.toml  requirements.txt  rq1.ipynb  rq1.py  rq1.sh  rq1_analysis_deep.ipynb  rq1_rq2_stats.py  rq1_simple.ipynb  rq2.ipynb  rq2.py  rq2.sh  rq2_stats.py  rq3.ipynb  rq3.py  rq3.sh  run_classifier.py  run_experiments.py  sae_lens_pipeline.py  train_classifier.py  transliterate.py  utils.py
assets/: transliterations.json
assets/gemma-3-4b-it/: sae_features.json
assets/sae_activations/: benign_0-en-17.pt  benign_0-en_ta-17.pt  benign_0-gu_en-17.pt  benign_0-hi_en-17.pt  benign_0-ta-17.pt  benign_0-te-17.pt  benign_0-te_en-17.pt  benign_1-en-17.pt  benign_1-en_gu-17.pt  benign_1-en_hi-17.pt  benign_1-en_te-17.pt  benign_1-hi-17.pt  benign_1-hi_en-17.pt  benign_1-ta-17.pt  benign_1-ta_en-17.pt  benign_10-en-17.pt  benign_10-en_hi-17.pt  benign_10-en_ta-17.pt  benign_10-en_te-17.pt  benign_10-gu_en-17.pt  benign_10-hi-17.pt  benign_10-hi_en-17.pt  benign_10-ta-17.pt  benign_10-ta_en-17.pt  benign_10-te-17.pt  benign_11-gu_en-17.pt  benign_11-ta-17.pt  benign_11-te-17.pt  benign_12-en-17.pt  benign_12-en_gu-17.pt  benign_12-en_hi-17.pt  benign_12-gu-17.pt  benign_12-hi-17.pt  benign_12-hi_en-17.pt  benign_12-ta_en-17.pt  (+1349 more)
docs/: data-model.md  getting-started.md  intro.md
results/: result.json
tests/: test_rq1_rq2_stats.py  test_rq2_stats.py
(+1234 files in other folders)
